# sw_align

./: .gitignore  CMakeLists.txt  README.md  SW_PARSE.txt  dump_file.txt  get_max.py  output_file.txt  python_wrapper.py  setup
resources/: file_1.fasta  file_2.fasta  test1.fasta  test_short.fasta
src/: main.cpp  test.fasta  test2.fasta
